# yt-mcp-transcript

./: .gitignore  LICENSE  README.md  gradio_interface.py  pyproject.toml  readme.md  test_transcript_saving.py
src/: __init__.py  mcp_youtube.py
transcript/: pebgrFQ-C7M_en_no_timestamps.txt  pebgrFQ-C7M_en_with_timestamps.txt
